# core-library-python

./: Jenkinsfile  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
config/: core_constants.py
exception/: generic_exception.py  storage_exception.py
src/br/com/housesoftware/corelibrary/documentation/: api_documentation.py
src/br/com/housesoftware/corelibrary/exception/: auth_credential_exception.py  not_found_exception.py  problem.py
src/core_library_python.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
