[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "core-library-python"
dynamic = ["version"]
description = "Core Library Python"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "PyJWT==2.12.1",
    "bcrypt==4.1.3",
    "python-dotenv==1.0.1"
]

[tool.setuptools.packages.find]
where = ["src"]